refactor(tests): group related unit tests using @Nested in AdminIntersectionServiceTest
- Organized test methods into logical groups (`GetAllIntersections`, `GetIntersection`, `PatchIntersection`) using `@Nested` for improved readability and maintainability.
- Removed outdated comments and unnecessary helper factories.